tests/baselines/reference/unicodeExtendedEscapesInStrings24(target=es6).errors.txt
unicodeExtendedEscapesInStrings24.ts(1,27): error TS1199: Unterminated Unicode escape sequence.


==== unicodeExtendedEscapesInStrings24.ts (1 errors) ====
    var x = "\u{00000000000067
                              
!!! error TS1199: Unterminated Unicode escape sequence.
    